--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ coverage
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+test/db.sqlite
