--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-chai-friendly": "^0.4.0",
     "eslint-plugin-import": "^2.8.0",
+    "joi": "^13.0.2",
     "knex": "^0.14.2",
     "mocha": "^4.0.1",
     "sqlite3": "^3.1.13"
